group 'ru.ortex'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 10

repositories {
    mavenCentral()
}

ext.moduleName = 'ru.ortex.crawler'

compileJava {
    inputs.property("moduleName", moduleName)
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
        ]
        classpath = files()
    }
}

compileTestJava {
    inputs.property("moduleName", moduleName)
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'junit',
                '--add-reads', "$moduleName=junit",
                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
        ]
        classpath = files()
    }
}

dependencies {
    compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
    compile group: 'org.asynchttpclient', name: 'async-http-client', version: '2.4.7'
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'

    testCompile group: 'junit', name: 'junit', version: '4.12'
}
